# utf8_gbk_lib

./: LICENSE  README.md
MyQueueDemo/: MyQueue.cpp  MyQueue.h  README.md  mind map.drawio  test.cpp
cross-compiler-iconv/: .gitignore  CMakeLists.txt  README.md  cat1_build.bat  gnu_build.sh  linux_build.sh  make_msvc_project.bat
cross-compiler-iconv/cmake/: cat1-arm-none-eabi.toolchain.cmake  config.cmake.in
cross-compiler-iconv/src/: CMakeLists.txt  ascii.c  ascii.h  gbk.c  gbk.h  gbkext_inv.c  gbkext_inv.h  utf8.c  utf8.h
libiconv-1.16/: config.h  config.status  libtool
libiconv-1.16/lib/: libcharset.so.1  libiconv.la
libiconv-1.16/lib/.libs/: libiconv.so.2.6.1
libiconv-1.16/libcharset/: config.status  libtool
libiconv-1.16/po/: Makefile  Makefile.in
libiconv-1.16/src/: Makefile  iconv  iconv_no_i18n
libiconv-1.16/src/.libs/: iconv_no_i18n
libiconv-1.16/srclib/: Makefile
libiconv-1.16/tests/: Makefile
utf-8_gbk/: ces_gbk.c  ces_gbk.h  converters.c  converters.h  cp936ext.c  cp936ext.h  gb2312.c  gb2312.h  iconv.c  iconv.h  iconv_plus.c  test.c  transcoding.h  utf8.c  utf8.h
